# do-paginate

./: Cargo.toml  README.md
src/: lib.rs  main.rs  paginate.rs
